--- a/public/learning-assets/css/custom.css
+++ b/public/learning-assets/css/custom.css
@@ -2463,6 +2463,10 @@ textarea.input-bg {
     background: linear-gradient(270.74deg, #EFB443 14.96%, #D94C01 61.5%);
 }
 
+.bg-gradient-blue-purple{
+    background: linear-gradient(270.74deg, #23358C 14.96%, #490495 61.5%);
+}
+
 .bg-light-yellow{
     background: rgba(239, 180, 67, 0.1);
 }
@@ -2551,4 +2555,20 @@ textarea.input-bg {
     object-position: center;
     width: 50px;
     height: 50px;
+}
+
+.bg-navy-blue{
+    background-color: #181e50;
+}
+
+/*.text-orange {*/
+/*    color: #fd9a5a;*/
+/*}*/
+
+.text-navy-blue{
+    color: #181e50;
+}
+
+.bg-light-purple{
+    background-color: #D2A9FF;
 }
